cdk.out/VpcStack.template.json
{
 "Resources": {
  "AppVpc80F1F7F9": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/Resource"
   }
  },
  "AppVpcpublicSubnet1Subnet8772DAEA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet1/Subnet"
   }
  },
  "AppVpcpublicSubnet1RouteTableF902084E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet1/RouteTable"
   }
  },
  "AppVpcpublicSubnet1RouteTableAssociation1AC5573B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AppVpcpublicSubnet1RouteTableF902084E"
    },
    "SubnetId": {
     "Ref": "AppVpcpublicSubnet1Subnet8772DAEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "AppVpcpublicSubnet1DefaultRouteE576D94C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "AppVpcIGW826A76F0"
    },
    "RouteTableId": {
     "Ref": "AppVpcpublicSubnet1RouteTableF902084E"
    }
   },
   "DependsOn": [
    "AppVpcVPCGW1D33210A"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet1/DefaultRoute"
   }
  },
  "AppVpcpublicSubnet1EIP42F76984": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet1/EIP"
   }
  },
  "AppVpcpublicSubnet1NATGateway9E7EC93F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "AppVpcpublicSubnet1EIP42F76984",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "AppVpcpublicSubnet1Subnet8772DAEA"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "AppVpcpublicSubnet1DefaultRouteE576D94C",
    "AppVpcpublicSubnet1RouteTableAssociation1AC5573B"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet1/NATGateway"
   }
  },
  "AppVpcpublicSubnet2SubnetE41E6C0A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet2/Subnet"
   }
  },
  "AppVpcpublicSubnet2RouteTable82F17977": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet2/RouteTable"
   }
  },
  "AppVpcpublicSubnet2RouteTableAssociationAFB1BC14": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AppVpcpublicSubnet2RouteTable82F17977"
    },
    "SubnetId": {
     "Ref": "AppVpcpublicSubnet2SubnetE41E6C0A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "AppVpcpublicSubnet2DefaultRouteBA859B08": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "AppVpcIGW826A76F0"
    },
    "RouteTableId": {
     "Ref": "AppVpcpublicSubnet2RouteTable82F17977"
    }
   },
   "DependsOn": [
    "AppVpcVPCGW1D33210A"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/publicSubnet2/DefaultRoute"
   }
  },
  "AppVpcprivateSubnet1Subnet8CF47DFB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet1/Subnet"
   }
  },
  "AppVpcprivateSubnet1RouteTable6494272F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet1/RouteTable"
   }
  },
  "AppVpcprivateSubnet1RouteTableAssociation4118B1BE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AppVpcprivateSubnet1RouteTable6494272F"
    },
    "SubnetId": {
     "Ref": "AppVpcprivateSubnet1Subnet8CF47DFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "AppVpcprivateSubnet1DefaultRoute57A63F17": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "AppVpcpublicSubnet1NATGateway9E7EC93F"
    },
    "RouteTableId": {
     "Ref": "AppVpcprivateSubnet1RouteTable6494272F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet1/DefaultRoute"
   }
  },
  "AppVpcprivateSubnet2Subnet2BB4B216": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet2/Subnet"
   }
  },
  "AppVpcprivateSubnet2RouteTableC4E83AEF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet2/RouteTable"
   }
  },
  "AppVpcprivateSubnet2RouteTableAssociation35EA2B1E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AppVpcprivateSubnet2RouteTableC4E83AEF"
    },
    "SubnetId": {
     "Ref": "AppVpcprivateSubnet2Subnet2BB4B216"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "AppVpcprivateSubnet2DefaultRoute4128D3F7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "AppVpcpublicSubnet1NATGateway9E7EC93F"
    },
    "RouteTableId": {
     "Ref": "AppVpcprivateSubnet2RouteTableC4E83AEF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/privateSubnet2/DefaultRoute"
   }
  },
  "AppVpcIGW826A76F0": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/AppVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/IGW"
   }
  },
  "AppVpcVPCGW1D33210A": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "AppVpcIGW826A76F0"
    },
    "VpcId": {
     "Ref": "AppVpc80F1F7F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AppVpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WP0QqCMBSGn6X7uWRE9yIR3sTQ8Da2eaKZbrGdKSG+exMrr/7vfPwczmGUpUea7sToE9U8k05LOlUo1JNEdQPF6FS/FMnvpuY54UF2WlVBGsDFbVTagHAVsoPNby7z3iotUFvzLy9wKvgSF4FngTCKN+FODxG3xYVBcJF/hfWS75RhPPXRg8GZlOBtcApmYmwDtPX7gR0oi8+1XuvEBYO6B1qu+QF8kDlK+QAAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefAppVpcprivateSubnet1Subnet8CF47DFB43A8E9EA": {
   "Value": {
    "Ref": "AppVpcprivateSubnet1Subnet8CF47DFB"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefAppVpcprivateSubnet1Subnet8CF47DFB43A8E9EA"
   }
  },
  "ExportsOutputRefAppVpcprivateSubnet2Subnet2BB4B2161CC6673C": {
   "Value": {
    "Ref": "AppVpcprivateSubnet2Subnet2BB4B216"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefAppVpcprivateSubnet2Subnet2BB4B2161CC6673C"
   }
  },
  "ExportsOutputRefAppVpc80F1F7F93D0AA00C": {
   "Value": {
    "Ref": "AppVpc80F1F7F9"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefAppVpc80F1F7F93D0AA00C"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
